# django-admin-flexselect

./: .gitignore  README.md  pyproject.toml  setup.py
flexselect/: __init__.py  urls.py  views.py
flexselect/static/flexselect/js/: flexselect.js
test_project/test_app/: admin.py  models.py  settings.py  urls.py
